# seilio-billing

./: .gitignore  Makefile  README.md  build_deb.sh  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: deb-build.yml  windows-build.yml
packaging/: control.template  seilio-billing.desktop  seilio-billing.wrapper
packaging/windows/: seilio-billing.spec
resources/: gen_icons.py
scripts/: build_client_cards.py
seilio_billing/: db.py  facturx_export.py  i18n.py  icons.py  importer.py  ledger.py  main.py  models.py  numbering.py  pa_connector.py  seed.py  theme.py  tiime_export.py
seilio_billing/ui/: __init__.py  clients_tab.py  dashboard_tab.py  declarations_tab.py  document_wizard.py  documents_tab.py  facturx_tab.py  i18n.py  import_tab.py  ledger_tab.py  main_window.py  settings_tab.py
tests/: test_ledger.py
